--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import "./vendor/normalize.css";
-@import "./vendor/fonts.css";
-@import "./blocks/page.css";
-@import "./blocks/header.css";
-@import "./blocks/profile.css";
-@import "./blocks/elements.css";
-@import "./blocks/element.css";
-@import "./blocks/footer.css";
-@import "./blocks/popup.css";
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts.css);
+@import url(./blocks/page.css);
+@import url(./blocks/header.css);
+@import url(./blocks/profile.css);
+@import url(./blocks/elements.css);
+@import url(./blocks/element.css);
+@import url(./blocks/footer.css);
+@import url(./blocks/popup.css);
