--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -222,13 +222,14 @@
 
   .popup__X-button {
     color: white;
-    margin-right: auto;
+    margin: 0 auto;
     width: 40px;
     height: 40px;
+    display: block;
   }
 
   .popup__container {
-    width: 282px;
+    max-width: 282px;
   }
 
   .popup__title {
