--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,6 @@
 @import url(./blocks/element.css);
 @import url(./blocks/footer.css);
 @import url(./blocks/popup.css);
+@import url(./blocks/Login.css);
+@import url(./blocks/register.css);
+@import url(./blocks/InfoTooltip.css);
