--- a/src/blocks/InfoTooltip.css
+++ b/src/blocks/InfoTooltip.css
@@ -1,4 +1,4 @@
-.pops {
+.toolTip {
   position: fixed;
   /*visibility: hidden;
   opacity: 0;*/
@@ -33,39 +33,35 @@
   border: none;
 }
 
-/* .popup_opened {
-  visibility: visible;
-  opacity: 1;
-} */
-
-.pops__container {
+.toolTip__container {
   width: 430px;
   background-color: white;
   border-radius: 2%;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.pops__success-logo {
+.toolTip__success-logo {
   width: 120px;
   height: 120px;
   align-self: center;
-  padding: 60px 150px 32px;
+  padding: 60px 155px 32px;
 }
 
-.pops__success-letter {
-  width: 80%;
+.toolTip__success-letter {
   font-size: 24px;
   font-weight: 900;
   line-height: 100%;
   color: black;
-  padding: 0px 60px 0px 0px;
-  margin: 0px;
   text-align: center;
-  align-self: center;
+  padding: 0px 36px 60px;
+  margin: 0px;
 }
 
 @media screen and (max-width: 880px) and (min-width: 544px) {
-  .popup__container {
+  .toolTip__container {
     width: 100%;
     max-width: 358px;
   }
@@ -76,8 +72,7 @@
 }
 
 @media screen and (max-width: 544px) {
-  .popup {
-    top: 123px;
+  .toolTip {
     width: 90%;
   }
 
@@ -89,11 +84,11 @@
     display: block;
   }
 
-  .popup__container {
+  .toolTip__container {
     max-width: 282px;
   }
 
-  .popup__title {
+  .toolTip__title {
     width: 330px;
     font-size: 18px;
     line-height: 22px;
